JQuery moved to new file

--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
         </div>
         </div>
     </form>
-    <div class="button"><button id="submitButton">Submit</button></div>
+    <div class="button"><button onclick="validation()">Submit</button></div>
 </div>
     
 
